--- a/common.blocks/logo/logo.css
+++ b/common.blocks/logo/logo.css
@@ -1,6 +1,6 @@
-.logo
-{
-    width: 70px;
-    height: 58px;
+:block(logo) {
+    width: 30px;
+    height: 25px;
+
     background: url(logo.svg) no-repeat;
 }
