--- a/common.blocks/toolbar/toolbar.css
+++ b/common.blocks/toolbar/toolbar.css
@@ -3,14 +3,12 @@
 
     background: #079;
 
-    text-align: right;
-
     position: fixed;
     bottom: 0;
     right: 0;
     left: 0;
 }
 
-:block(toolbar):elem(button) {
-
+:block(toolbar):elem(buttons) {
+    text-align: right;
 }
