--- a/common.blocks/editor/editor.css
+++ b/common.blocks/editor/editor.css
@@ -1,8 +1,7 @@
 :block(editor) {
-    flex-direction: row;
-
-    flex: 1;
-    margin-bottom: 66px;
+    width: 70%;
+    display: inline-block;
+    box-sizing: border-box;
 
      &:elem(unit) {
          position: relative;
@@ -12,14 +11,11 @@
      }
 
      &:elem(source) {
-         display: inline-block;
          width: 45%;
          padding: 10px;
          box-sizing: border-box;
          display: table-cell;
-           &:mod(focused) {
-               background: #ffffe0;
-           }
+         max-width: 1px;
      }
 
      &:elem(target) {
@@ -48,4 +44,8 @@
           border-bottom: 0;
           border-color: #079;
       }
+}
+
+.editor__unit_focused .editor__source{
+    background: #ffffe0;
 }
