--- a/common.blocks/workspace/workspace.css
+++ b/common.blocks/workspace/workspace.css
@@ -1,6 +1,6 @@
 .workspace_mode_unverified-only .editor__unit_verified {
     display: block;
-    height: 0;
-    border: 2px solid #012B38;
+    height: 2px;
+    border: 2px solid #FFAF41;
     overflow: hidden;
 }
