add bestMatch field at AltTrans block

--- a/common.blocks/alternative-translation/alternative-translation.css
+++ b/common.blocks/alternative-translation/alternative-translation.css
@@ -13,5 +13,9 @@
          box-sizing: border-box;
          border: 1px solid #079;
          padding: 10px;
-    }
+     }
+}
+
+.alternative-translation__translation_bestMatch {
+    background: #ffdb4d;
 }
