--- a/common.blocks/form/form.css
+++ b/common.blocks/form/form.css
@@ -1,8 +1,8 @@
-.form {
+:block(form) {
     width: 300px;
     margin: auto;
-}
 
-.form__item {
-    margin: 12px 0;
+    &:elem(item) {
+        margin: 12px 0;
+    }
 }
