--- a/common.blocks/toolbar/toolbar.css
+++ b/common.blocks/toolbar/toolbar.css
@@ -7,21 +7,21 @@
     padding: 9px;
     background: #079;
     box-sizing: border-box;
-}
 
-:block(toolbar):elem(buttons) {
-    position: absolute;
-    bottom: 10px;
-}
+    &:elem(buttons) {
+        position: absolute;
+        bottom: 10px;
+    }
 
-:block(toolbar):elem(action):block(toolbar):elem(action) {
-   margin-left: 5px;
-}
+    &:elem(action)&:elem(action) {
+       margin-left: 5px;
+    }
 
-:block(toolbar):elem(toggle-verified) {
-    color: #fff;
-}
+    &:elem(toggle-verified) {
+        color: #fff;
+    }
 
-:block(toolbar):elem(button) {
-    float: right;
+    &:elem(button) {
+        float: right;
+    }
 }
