moved toggle-verified from panel to toolbar

--- a/common.blocks/workspace/workspace.css
+++ b/common.blocks/workspace/workspace.css
@@ -1,6 +1,3 @@
-:block(workspace):mod(mode unverified-only) :block(editor):elem(unit):mod(verified) {
-    display: block;
-    height: 2px;
-    border: 2px solid #ffaf41;
-    overflow: hidden;
+:block(workspace):mod(mode unverified-only) :block(editor-unit):mod(verified) {
+    display: none;
 }
