--- a/common.blocks/panel/panel.css
+++ b/common.blocks/panel/panel.css
@@ -2,6 +2,7 @@
     &:elem(header) {
         display: table;
         width: 100%;
+        border-bottom: 1px solid #e5e5e5;
     }
 
     &:elem(side) {
