--- a/common.blocks/workspace/workspace.css
+++ b/common.blocks/workspace/workspace.css
@@ -1,3 +1,8 @@
 :block(workspace):mod(mode unverified-only) :block(editor-unit):mod(verified) {
     display: none;
 }
+
+:block(workspace):elem(centerblock) {
+    width: 75%;
+    display: inline-block;
+}
